@@ -98,6 +98,7 @@
 #include "descrobject.h"
 #include "warnings.h"
 #include "weakrefobject.h"
+#include "structseq.h"
 
 #include "codecs.h"
 #include "pyerrors.h"
