@@ -2,7 +2,6 @@
 /* UNIX group file access module */
 
 #include "Python.h"
-#include "structseq.h"
 
 #include <sys/types.h>
 #include <grp.h>
